--- a/placement/templates/placement/CreateUser.html
+++ b/placement/templates/placement/CreateUser.html
@@ -2,13 +2,12 @@
 {% block content %}
 <div class="p-3">
   <div class="d-flex align-items-center justify-content-between mb-4">
-    <h3>{{ heading }}</h3>
+    <h3>Create User</h3>
   </div>
   <div class="card">
     <div class="card-body">
-      <form method="post" action="{% url postUrl %}">
-        {% csrf_token %}
-        <fieldset class="form-group">{{ form | crispy }}</fieldset>
+      <form method="post">
+        {% csrf_token %} {{ form | crispy }}
         <button
           type="submit"
           value="Update"
