--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -16,7 +16,8 @@
   <body>
     <div class="main-page">
       <div class="content-section">
-        <h3>Login to TPO UVCE</h3>
+        <h3>Login to Training & Placement Cell </h3>
+        <h3>MSRUAS</h3>
         <form method="post">
           {% csrf_token %}
           <fieldset class="form-group">{{ form | crispy }}</fieldset>
